--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,4 +1,11 @@
-<input type="text" [(ngModel)]="name">
-<h2> Hi {{ name }}</h2>
-
-
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>I am in the app component</h1>
+      <hr />
+      <app-servers></app-servers>
+      <app-warning-alert></app-warning-alert>
+      <app-sucess-alert></app-sucess-alert>
+    </div>
+  </div>
+</div>
