--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -35,6 +35,10 @@
     remove servers
   </button>
   <hr />
-  <p>{{ serverCreationStatus }}</p>
+  <!-- <p>{{ serverCreationStatus }}</p> -->
+  <p *ngIf="serverCreated; else noServer">
+    Server was created {{ serverName }}
+  </p>
+  <ng-template #noServer> <p>No server was created</p> </ng-template>
   <app-server></app-server>
 </div>
