--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -40,5 +40,6 @@
     Server was created {{ serverName }}
   </p>
   <ng-template #noServer> <p>No server was created</p> </ng-template>
+  <!-- <app-server *ngFor="let server of servers"></app-server> -->
   <app-server></app-server>
 </div>
