--- a/my-project/src/app/app.component.html
+++ b/my-project/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <app-recipe></app-recipe>
+      <app-shopping-list></app-shopping-list>
       <h2>I am working</h2>
     </div>
   </div>
