--- a/section-5/section-five/src/app/server-element/server-element.component.html
+++ b/section-5/section-five/src/app/server-element/server-element.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
-  <div class="panel-heding">{{ element.name }}</div>
-  <div class="pnel-body">
+  <div class="panel-heading">{{ element.name }}</div>
+  <div class="panel-body">
     <p>
       <strong *ngIf="element.type === 'server'" style="color: red">
         {{ element.content }}</strong
